# server/docs/swagger.json
@@ -1762,6 +1762,76 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete a match",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "matches"
+                ],
+                "summary": "Delete",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Season id",
+                        "name": "seasonId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "League id",
+                        "name": "leagueId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Match id",
+                        "name": "matchId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No content"
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ValidationFailure"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Failure"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.Failure"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Failure"
+                        }
+                    }
+                }
             }
         },
         "/v1/seasons/{seasonId}/leagues/{leagueId}/matches/{matchId}/score": {
@@ -2541,15 +2611,15 @@
                 "phone_number": {
                     "type": "string"
                 },
-                "player_profile": {
-                    "$ref": "#/definitions/me.PlayerProfileModel"
+                "player": {
+                    "$ref": "#/definitions/me.PlayerModel"
                 },
                 "role": {
                     "type": "string"
                 }
             }
         },
-        "me.PlayerProfileModel": {
+        "me.PlayerModel": {
             "type": "object",
             "properties": {
                 "activity_ratio": {
