# server/v1/matches/handler.go
@@ -8,17 +8,19 @@ import (
 	"github.com/go-chi/chi/v5"
 	"github.com/markovidakovic/gdsi/server/config"
 	"github.com/markovidakovic/gdsi/server/db"
+	"github.com/markovidakovic/gdsi/server/middleware"
 	"github.com/markovidakovic/gdsi/server/response"
 )
 
 type handler struct {
 	service *service
+	store   *store
 }
 
 func newHandler(cfg *config.Config, db *db.Conn) *handler {
 	h := &handler{}
-	store := newStore(db)
-	h.service = newService(cfg, store)
+	h.store = newStore(db)
+	h.service = newService(cfg, h.store)
 	return h
 }
 
@@ -50,12 +52,15 @@ func (h *handler) postMatch(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	ctx := r.Context()
+
 	// set additional values in input
 	input.SeasonId = chi.URLParam(r, "seasonId")
 	input.LeagueId = chi.URLParam(r, "leagueId")
+	input.PlayerOneId = ctx.Value(middleware.PlayerIdCtxKey).(string)
 
 	// call the service
-	result, err := h.service.processCreateMatch(r.Context(), input)
+	result, err := h.service.processCreateMatch(ctx, input)
 	if err != nil {
 		switch {
 		case errors.Is(err, response.ErrBadRequest):
@@ -168,12 +173,15 @@ func (h *handler) putMatch(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	ctx := r.Context()
+
 	input.SeasonId = chi.URLParam(r, "seasonId")
 	input.LeagueId = chi.URLParam(r, "leagueId")
 	input.MatchId = chi.URLParam(r, "matchId")
+	input.PlayerOneId = ctx.Value(middleware.PlayerIdCtxKey).(string)
 
 	// call the service
-	result, err := h.service.processUpdateMatch(r.Context(), input)
+	result, err := h.service.processUpdateMatch(ctx, input)
 	if err != nil {
 		switch {
 		case errors.Is(err, response.ErrBadRequest):
@@ -208,5 +216,76 @@ func (h *handler) putMatch(w http.ResponseWriter, r *http.Request) {
 // @Security BearerAuth
 // @Router /v1/seasons/{seasonId}/leagues/{leagueId}/matches/{matchId}/score [post]
 func (h *handler) postMatchScore(w http.ResponseWriter, r *http.Request) {
-	response.WriteSuccess(w, http.StatusOK, "update match")
+	// decode input
+	var input SubmitMatchScoreRequestModel
+	if err := json.NewDecoder(r.Body).Decode(&input); err != nil {
+		response.WriteFailure(w, response.NewBadRequestFailure("invalid request body"))
+		return
+	}
+
+	// validation
+	if valErr := input.Validate(); valErr != nil {
+		response.WriteFailure(w, response.NewValidationFailure("validation failed", valErr))
+		return
+	}
+
+	// add params to input
+	input.SeasonId = chi.URLParam(r, "seasonId")
+	input.LeagueId = chi.URLParam(r, "leagueId")
+	input.MatchId = chi.URLParam(r, "matchId")
+
+	// call the service
+	result, err := h.service.processSubmitMatchScore(r.Context(), input)
+	if err != nil {
+		switch {
+		case errors.Is(err, response.ErrBadRequest):
+			response.WriteFailure(w, response.NewBadRequestFailure(err.Error()))
+			return
+		case errors.Is(err, response.ErrNotFound):
+			response.WriteFailure(w, response.NewNotFoundFailure(err.Error()))
+			return
+		case errors.Is(err, response.ErrConflict):
+			response.WriteFailure(w, response.NewConflictFailure(err.Error()))
+			return
+		default:
+			response.WriteFailure(w, response.NewInternalFailure(err))
+			return
+		}
+	}
+
+	response.WriteSuccess(w, http.StatusOK, result)
+}
+
+// @Summary Delete
+// @Description Delete a match
+// @Tags matches
+// @Accept json
+// @Produce json
+// @Param seasonId path string true "Season id"
+// @Param leagueId path string true "League id"
+// @Param matchId path string true "Match id"
+// @Success 204 "No content"
+// @Failure 400 {object} response.ValidationFailure "Bad request"
+// @Failure 401 {object} response.Failure "Unauthorized"
+// @Failure 404 {object} response.Failure "Not found"
+// @Failure 500 {object} response.Failure "Internal server error"
+// @Security BearerAuth
+// @Router /v1/seasons/{seasonId}/leagues/{leagueId}/matches/{matchId} [delete]
+func (h *handler) deleteMatch(w http.ResponseWriter, r *http.Request) {
+	err := h.service.processDeleteMatch(r.Context(), chi.URLParam(r, "seasonId"), chi.URLParam(r, "leagueId"), chi.URLParam(r, "matchId"))
+	if err != nil {
+		switch {
+		case errors.Is(err, response.ErrBadRequest):
+			response.WriteFailure(w, response.NewBadRequestFailure(err.Error()))
+			return
+		case errors.Is(err, response.ErrNotFound):
+			response.WriteFailure(w, response.NewNotFoundFailure(err.Error()))
+			return
+		default:
+			response.WriteFailure(w, response.NewInternalFailure(err))
+			return
+		}
+	}
+
+	response.WriteSuccess(w, http.StatusNoContent, nil)
 }
